[gd_scene load_steps=9 format=3 uid="uid://c8jx2be4cfkb8"]

[ext_resource type="FontFile" uid="uid://b83lr4reqbm0y" path="res://assets/fonts/8BitOperator/8bitOperatorPlus8-Regular.ttf" id="1_ahhtf"]
[ext_resource type="Script" uid="uid://c3x6useidlf8i" path="res://scripts/ui/hud.gd" id="1_oo0fn"]
[ext_resource type="PackedScene" uid="uid://bt7cyrrey8yth" path="res://scenes/ui/pause_menu.tscn" id="4_047uy"]
[ext_resource type="PackedScene" uid="uid://dq8tglr0iktqf" path="res://scenes/ui/npc_menu.tscn" id="6_5pdws"]
[ext_resource type="PackedScene" uid="uid://dnqh6jeh6decu" path="res://scenes/ui/finishscreen.tscn" id="6_047uy"]
[ext_resource type="PackedScene" uid="uid://bbaa6s8vockj8" path="res://scenes/ui/failscreen.tscn" id="7_5pdws"]
[ext_resource type="Script" uid="uid://cysslxg82gi06" path="res://scripts/ui/transition_rect.gd" id="7_gss2c"]
[ext_resource type="FontFile" uid="uid://b3j21gnxq1jn1" path="res://assets/fonts/8BitOperator/8bitOperatorPlus8-Bold.ttf" id="8_h022r"]

[node name="HUD" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_oo0fn")

[node name="Control" type="Control" parent="."]
z_index = 100
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 647.0

[node name="ProgressBar" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 48.0
offset_right = 32.0
offset_bottom = 64.0
color = Color(0.967307, 0.804114, 0, 1)

[node name="ProgressBarPercent" type="Label" parent="Control/ProgressBar"]
layout_mode = 0
offset_left = 68.0
offset_top = 1.0
offset_right = 110.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 22
text = "0%"

[node name="ProgressBackground" type="ColorRect" parent="Control/ProgressBar"]
z_index = -1
layout_mode = 0
offset_right = 64.0
offset_bottom = 16.0
color = Color(0.552956, 0.552956, 0.552956, 1)

[node name="Label" type="Label" parent="Control/ProgressBar"]
layout_mode = 0
offset_top = -17.0
offset_right = 125.0
offset_bottom = -5.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
text = "Lawn Progress"

[node name="HealthBar" type="ColorRect" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 91.0
offset_right = 96.0
offset_bottom = 107.0
color = Color(0.878431, 0.0745098, 0.254902, 1)

[node name="HealthPercent" type="Label" parent="Control/HealthBar"]
layout_mode = 0
offset_left = 68.0
offset_top = 1.0
offset_right = 110.0
offset_bottom = 24.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 22
text = "100%"

[node name="HealthBackground" type="ColorRect" parent="Control/HealthBar"]
z_index = -1
layout_mode = 0
offset_right = 64.0
offset_bottom = 16.0
color = Color(0.552956, 0.552956, 0.552956, 1)

[node name="Label" type="Label" parent="Control/HealthBar"]
layout_mode = 0
offset_top = -17.0
offset_right = 125.0
offset_bottom = -5.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
text = "Health"

[node name="Timer" type="Label" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 116.0
offset_right = 113.0
offset_bottom = 138.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 30
text = "00:00"

[node name="Bonus" type="Label" parent="Control"]
layout_mode = 0
offset_left = 32.0
offset_top = 142.0
offset_right = 159.0
offset_bottom = 164.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 20
text = "BONUS: 00:00"

[node name="NPCMenu" parent="Control" instance=ExtResource("6_5pdws")]
visible = false
layout_mode = 1

[node name="InfoText" type="Label" parent="Control"]
layout_mode = 2
offset_left = 1.0
offset_top = 563.0
offset_right = 1152.0
offset_bottom = 638.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
text = "Info Text"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MoneyLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 848.0
offset_top = 29.0
offset_right = 1123.0
offset_bottom = 52.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 32
text = "$0"
horizontal_alignment = 2

[node name="DayLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 848.0
offset_top = 57.0
offset_right = 1123.0
offset_bottom = 75.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
text = "Day 1"
horizontal_alignment = 2

[node name="LawnCounter" type="Label" parent="Control"]
layout_mode = 0
offset_left = 848.0
offset_top = 78.0
offset_right = 1123.0
offset_bottom = 96.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_ahhtf")
theme_override_font_sizes/font_size = 24
text = "Mowed 0 Lawns"
horizontal_alignment = 2

[node name="DamageFlash" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(1, 0, 0, 0.501961)

[node name="PauseMenu" parent="Control" instance=ExtResource("4_047uy")]
visible = false
layout_mode = 1

[node name="Finishscreen" parent="Control" instance=ExtResource("6_047uy")]
visible = false
layout_mode = 1

[node name="Failscreen" parent="Control" instance=ExtResource("7_5pdws")]
visible = false
layout_mode = 1

[node name="TransitionRect" type="ColorRect" parent="Control"]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)
script = ExtResource("7_gss2c")

[node name="Label" type="Label" parent="Control/TransitionRect"]
layout_mode = 0
offset_top = 225.0
offset_right = 1152.0
offset_bottom = 360.0
theme_override_fonts/font = ExtResource("8_h022r")
theme_override_font_sizes/font_size = 80
text = "Day 1"
horizontal_alignment = 1
vertical_alignment = 1
